# cutil

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile.am  README.md  configure.ac
.github/workflows/: c-cpp.yml
check/: CMakeLists.txt  Makefile.am  check_linked_list.c  check_map.c  check_stack.c  check_string.c  check_vector.c
include/: cutil.h
include/cutil/: csv.h  linked_list.h  map.h  stack.h  string.h  vector.h
src/: Makefile.am  csv.c  linked_list.c  map.c  stack.c  string.c  vector.c
